--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             const minutes = Math.floor((diff / (1000 * 60)) % 60);
             const seconds = Math.floor((diff / 1000) % 60);
 
-            countdown.textContent = `Christmas:  ${hours}h ${minutes}m ${seconds}s`;
+            countdown.textContent = `Christmas:  ${days}d ${hours}h ${minutes}m ${seconds}s`;
         }
 
         setInterval(updateCountdown, 1000);
